Fix avatar selector tooltips appearing behind dialog backdrop
Tooltips were written into #hover-tip-container in the normal DOM, which
sits behind the backdrop of a showModal() dialog. Fix by appending the
tip inside the <dialog> element itself (top layer) when the hovered node
is inside one. Also switch .hover-tip from position:absolute to
position:fixed, using getBoundingClientRect() for viewport-relative
coordinates so positioning works correctly in both contexts.

Also hardcode avatar names in lib_avatar_name.js, removing the
synchronous AJAX fetch of names.json on first use.

--- a/source/app/assets/stylesheets/hover-tip.scss
+++ b/source/app/assets/stylesheets/hover-tip.scss
@@ -6,7 +6,7 @@ $hoverFadePercent: 5%;
   @include plaintext-font();
   background: lighten($darker-color, $hoverFadePercent);
   z-index: 2000;
-  position: absolute;
+  position: fixed;
   color: darken($lighter-color, 6%);
   border: 1px dotted lighten($darker-color, 30%);
   border-radius: 5px;
